Remove the endpoint "deletePipelineByName"
